<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationPage">
    <LinearLayout
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <ImageButton
            android:id="@+id/backButtonRegister"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/back_press"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_weight="8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register  "
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="45sp"/>
    <EditText
        android:id="@+id/userNameRegister"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/light_yagami"
        android:singleLine="true" />
    <EditText
        android:id="@+id/userEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/kira2_deathnote_com"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
    <EditText
        android:id="@+id/userPasswordResgister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/userButtonRegister"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/confirm"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/regis_back_2"/>
    </LinearLayout>
</LinearLayout>