<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomePage">
    <LinearLayout
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:weightSum="10">
        <ImageView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"/>
       <Space
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="6"/>
        <ImageButton
            android:id="@+id/exitButtonwelcome"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:src="@drawable/exit"
            android:scaleType="centerInside"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Hello there !"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/userNameWelcome"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text=""/>

    <Button
        android:id="@+id/viewDetailsWelcome"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/view_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/registerNewWelcome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_new_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/upadteWelcome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/update_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/deleteUserWelcome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/delete_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gears_background"/>


    </LinearLayout>
</LinearLayout>